Fix sizing/alignment issues for additional templates

--- a/src/css/components/_control-bar.scss
+++ b/src/css/components/_control-bar.scss
@@ -26,6 +26,7 @@
             @include size(75px);
             display: flex;
             align-items: center;
+            justify-content: center;
             img {
                 max-width: 100%;
             }
