--- a/src/css/components/_double-graphic-with-softbuttons.scss
+++ b/src/css/components/_double-graphic-with-softbuttons.scss
@@ -58,8 +58,10 @@
     padding: 5px;
 }
 
-.double-graphic-with-softbuttons-template .soft-button .soft-button-image-static {
-    padding: 5px;
+.double-graphic-with-softbuttons-template .soft-button .soft-button-image {
+    max-width: 75px;
+    display: flex;
+    align-items: center;
 }
 
 .double-graphic-with-softbuttons-template .soft-button:last-child {
