--- a/src/css/components/_non-media.scss
+++ b/src/css/components/_non-media.scss
@@ -160,6 +160,8 @@
 .soft-button-image {
     height: 75px;
     max-width: 100%;
+    display: flex;
+    align-items: center;
     img {
         max-width: 100%;
         max-height: 100%;
